option(
    'tests',
    type : 'feature',
    value: 'enabled',
    description : 'Build tests'
)

option(
    'rmcp_ping',
    type : 'feature',
    value: 'enabled',
    description : 'Enable RMCP Ping support'
)

option(
    'pam_authenticate',
    type : 'feature',
    value: 'enabled',
    description : 'Enable Pam Authenticate'
)
